<resources>
    <string name="app_name">Day2Day</string>
    <string name="settings">Settings</string>
    <string name="database_name">TODOList</string>
    <string name="no_result">No result found</string>
    <string name="no_task">You have no task in your todo list yet</string>
    <string name="no_call">You have no call scheduled yet</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="add_task">Add task to your todo list</string>
    <string name="search">Search</string>
    <string name="planning">What are you planning</string>
    <string name="contact_reason">This application needs to read your contacts list</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="add_a_note">Add a note</string>
    <string name="list">List</string>


    <string name="title_activity_settings">Settings</string>

    <!-- keys for preference file-->
    <string name="preference_file_key">com.qadr.todoList.PREFERENCE</string>
    <string name="vibrate_pref">vibrate_preference</string>
    <string name="fullscreen_pref">fullscreen</string>
    <string name="ringtone_pref">ringtone</string>
    <string name="call_pref">call</string>
    <string name="category_icon">category icon</string>
    <string name="back">back</string>
    <string name="full_calendar">click to show full calendar</string>
    <string name="no_task_day">No task on this day</string>
    <string name="all">ALL</string>
    <string name="add_phone_number">Add Phone number</string>
    <string name="create">Create</string>
    <string name="remind_me">Remind me</string>
    <string name="task">Task</string>
    <string name="pending">pending</string>
    <string name="no">No</string>
    <string name="select_date">SELECT A DATE</string>
    <string name="select_date_time">Select date and time</string>
    <string name="new_task">New Task</string>
    <string name="mark_work_done_or_make_call_in_case_of_calls">Mark work done or make call in case of calls</string>
    <string name="cancel_the_notification">Cancel the notification</string>
    <string name="mark_as_done">Mark done</string>
    <string name="call_number">Call Number</string>
    <string name="expand_and_collapse">expand and collapse for more</string>
    <string name="note">Note :</string>
    <string name="delete">Delete</string>
    <string name="delete_alert_title">Delete All Tasks?</string>
    <string name="delete_alert_text">"This will delete all tasks in the database, It is not reversible"</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="undo">Undo</string>
    <string name="delete_task">Deleted Task</string>
    <string name="customize">Customize</string>
    <string name="already_exist">Already exist</string>
    <string name="task_done_or_not">show whether a task has been done or not</string>
    <string name="pending_summary">if you don\'t want to receive notification for the task already scheduled after clearing all the tasks</string>
    <string name="clear_summary">Clear all saved task, This action cannot be undone</string>
    <string name="call_summary">For call tasks reminder, Choose whether to make call directly or go to dialer</string>
    <string name="report">Report</string>


</resources>