<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoActivity"
    android:paddingHorizontal="15dp"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false"
        android:background="@drawable/appbar_background"
        android:layout_marginVertical="15dp"
        android:paddingVertical="10dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:layout_scrollFlags="noScroll"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/black"
            android:background="@color/Transparent"
            android:elevation="0dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendarRelative">

            <Button
                android:id="@+id/all_btn"
                style="@style/Widget.App.Button.OutlinedButton.AppBarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/all"
                android:layout_alignParentStart="true"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calendarIcon"
                android:src="@drawable/add_calendar_today_24_error"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:onClick="showCalendar"
                android:contentDescription="@string/full_calendar" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appbarRecyclerview"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/calendarIcon"/>


        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/icon"
                android:src="@drawable/list_home_work_40"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/category_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:layout_margin="15dp"
                android:layout_below="@id/icon"
                android:fontFamily="@font/google_sofia"
                android:text="@string/no_task"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/today_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/todayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/today_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/today_recylerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/todayText"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/others_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_relative"
                android:paddingVertical="10dp"
                android:visibility="gone">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/others_recylerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#662CCF"
        android:layout_gravity="bottom|end"
        android:tint="@color/black"
        app:tint="@color/black"
        android:src="@drawable/ic_baseline_plus_24"
        android:contentDescription="@string/add_task" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
