<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:elevation="8dp"
    app:cardElevation="8dp"
    android:padding="10dp"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp">


        <LinearLayout
            android:id="@+id/vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/list_call_40" />

            <LinearLayout
                android:id="@+id/titleLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:maxWidth="250dp"
                    android:maxLines="2"
                    android:text="Feed the dog and di the needfyl"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/todo_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="May 27, 2020 08:30"
                    android:textSize="12sp"
                    android:textStyle="normal" />


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="@id/vertical"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:visibility="gone"
            android:contentDescription="@string/task_done_or_not"
            android:src="@drawable/notification_done_outline_24"/>


        <ImageView
            android:id="@+id/image_overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/vertical"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/expand_and_collapse"
            android:paddingHorizontal="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"
            android:src="@drawable/item_expand_more_24" />


        <RelativeLayout
            android:id="@+id/expandCollapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_overflow"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:text="@string/note"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todo_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/note_text"
                android:maxLines="3"
                android:paddingHorizontal="10dp"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/todo_markBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/todo_note"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/mark_as_done"
                android:textColor="?attr/colorPrimaryVariant"/>

            <Button
                android:id="@+id/todo_deleteBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="20dp"
                android:layout_below="@+id/todo_note"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/todo_markBtn"
                android:text="@string/delete"

                android:textColor="?attr/colorPrimaryVariant" />
        </RelativeLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>

